# polygons

./: .gitignore  CMakeLists.txt  spaceObject.cpp  spaceObject.h  spaceObjectTest.cpp
.github/workflows/: build_cmake.yml
.nova/: Configuration.json
.nova/Tasks/: Polygons.json
src/: constants.h  game.cpp  spaceObject.cpp  spaceObject.h  spaceObjectTest.cpp
